# plume

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plume_libretro.info
src/: ihs.c  ihs.h  libretro.c  main.c  media.c  media.h  ui.c  ui.h
